[package]
name = "lottery-presentation"
version = "0.2.0"
authors = ["fteychene <francois.teychene@gmail.com>"]
edition = "2018"


[dependencies]
# Error
anyhow = "1.0"
# Json
serde = "1.0"
serde_derive = "1.0"
# Http client
reqwest = { version = "0.11", features = ["json"]}
# Utils
rand = "0.8"
matches = "0.1"
# Actor
actix-web = "3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# Log
log = "0.4"