[package]
name = "lottery-presentation"
version = "0.2.0"
authors = ["fteychene <francois.teychene@gmail.com>"]
edition = "2018"


[dependencies]
# Error
anyhow = "1.0"
thiserror = "1.0"
# Json
serde = { version = "1.0", features = ["derive"] }
#serde_derive = "1.0"
# Http client
reqwest = { version = "0.11", features = ["json"]}
# Utils
rand = "0.8"
matches = "0.1"
#Web
warp = "0.3"
## Actor
#actix-web = "3.3"
#actix-rt = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
# Log
log = "0.4"